# mola

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.rst  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  mola-module.yml  package.xml
apps/: CMakeLists.txt  mola-cli.cpp  mola-dir.cpp  mola-kitti-eval-error.cpp  mola-yaml-parser.cpp
debian/: changelog  (+5 more)
kitti_metrics_eval/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
kitti_metrics_eval/apps/: kitti-metrics-eval.cpp
modules/: CMakeLists.txt  all-checkout-master.sh  all-pull.sh  all-status.sh  git-all  git-checkout-all-default-branch.sh  pull-all-master.sh  run-all
mola/: CHANGELOG.rst  CMakeLists.txt  README.rst  package.xml
mola_bridge_ros2/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
mola_bridge_ros2/include/mola_bridge_ros2/: BridgeROS2.h
mola_bridge_ros2/src/: BridgeROS2.cpp
mola_demos/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
mola_demos/launch/: kitti_just_replay.yaml  mulran_just_replay.yaml  ros2_ouster_just_view.yaml
mola_demos/launch/work-in-progress/: ros1_velodyne_slam.yaml
mola_demos/mola-cli-launchs/: euroc_stereo_just_replay.yaml  kitti360_just_replay.yaml  kitti_just_replay.yaml  kitti_just_replay_to_ros2.yaml  mulran_just_replay.yaml  mulran_just_replay_to_ros2.yaml  paris_luco_just_replay.yaml  rawlog_just_replay.yaml  ros2_ouster_just_view.yaml  rosbag2_ouster_just_view.yaml  rosbag2_pointcloud_just_view.yaml
mola_demos/mola-cli-launchs/work-in-progress/: kitti_lidar_slam.yaml  kitti_monocular.yml  kitti_stereo.yml  rawlog_odom_and_lidar.yaml
mola_demos/ros2-launchs/: mrpt-pf.yaml  mulran-play.launch.py  point-cloud-pipeline.yaml  ros-kitti-play.launch.py  ros-mulran-pf-localization.launch.py
mola_demos/ros2-params/: mrpt-pf.yaml  point-cloud-pipeline.yaml
mola_demos/rviz2/: kitti.rviz  mulran.rviz
mola_imu_preintegration/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
mola_imu_preintegration/include/mola_imu_preintegration/: IMUIntegrationParams.h  RotationIntegrationParams.h  RotationIntegrator.h
mola_imu_preintegration/src/: IMUIntegrationParams.cpp  RotationIntegrationParams.cpp  RotationIntegrator.cpp  register.cpp
mola_imu_preintegration/tests/: CMakeLists.txt  test-imu-rotation-integrator.cpp
mola_input_euroc_dataset/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
mola_input_euroc_dataset/include/mola_input_euroc_dataset/: EurocDataset.h
mola_input_euroc_dataset/src/: EurocDataset.cpp
mola_input_paris_luco_dataset/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
mola_input_paris_luco_dataset/include/mola_input_paris_luco_dataset/: ParisLucoDataset.h
mola_input_paris_luco_dataset/src/: ParisLucoDataset.cpp
mola_input_rosbag2/: CHANGELOG.rst  CMakeLists.txt  package.xml
mola_input_rosbag2/include/mola_input_rosbag2/: Rosbag2Dataset.h
mola_input_rosbag2/src/: Rosbag2Dataset.cpp
mola_kernel/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
mola_kernel/include/mola_kernel/: Entity.h  Factor.h  FastAllocator.h  LazyLoadResource.h  WorldModel.h  Yaml.h  id.h  pretty_print_exception.h  variant_helper.h
mola_kernel/include/mola_kernel/entities/: EntityBase.h  EntityRelativeBase.h  KeyFrameBase.h  LandmarkPoint3.h  RefPose3.h  RelDynPose3KF.h  RelPose3.h  RelPose3KF.h  entities-common.h
mola_kernel/include/mola_kernel/factors/: FactorBase.h  FactorDynamicsConstVel.h  FactorRelativePose3.h  FactorStereoProjectionPose.h  SmartFactorIMU.h  SmartFactorStereoProjectionPose.h  factors-common.h
mola_kernel/src/: Entity.cpp  Factor.cpp  LazyLoadResource.cpp  WorldModel.cpp  pretty_print_exception.cpp  register.cpp
mola_kernel/src/entities/: EntityBase.cpp  LandmarkPoint3.cpp  RefPose3.cpp  RelDynPose3KF.cpp  RelPose3.cpp  RelPose3KF.cpp
mola_kernel/src/factors/: FactorBase.cpp  FactorDynamicsConstVel.cpp  FactorRelativePose3.cpp  FactorStereoProjectionPose.cpp  SmartFactorIMU.cpp  SmartFactorStereoProjectionPose.cpp
mola_kernel/src/interfaces/: BackEndBase.cpp  ExecutableBase.cpp  FilterBase.cpp  FrontEndBase.cpp  RawDataSourceBase.cpp
mola_launcher/: CHANGELOG.rst  CMakeLists.txt  package.xml
mola_launcher/apps/: CMakeLists.txt  mola-cli.cpp  mola-dir.cpp  mola-yaml-parser.cpp
mola_launcher/include/mola_launcher/: MolaLauncherApp.h
mola_launcher/scripts/: mola-cli-completion.bash
mola_launcher/src/: MolaDLL_Loader.cpp  MolaDLL_Loader.h  MolaLauncherApp.cpp
mola_metric_maps/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
mola_metric_maps/apps/: mola-myapp.cpp
mola_metric_maps/include/mola_metric_maps/: FixedDenseGrid3D.h  HashedVoxelPointCloud.h  OccGrid.h  SparseTreesPointCloud.h  SparseVoxelPointCloud.h  index3d_t.h
mola_metric_maps/src/: HashedVoxelPointCloud.cpp  OccGrid.cpp  SparseTreesPointCloud.cpp  SparseVoxelPointCloud.cpp  register.cpp
mola_metric_maps/tests/: CMakeLists.txt  test-mola_metric_maps_hashedvoxels.cpp  test-occgrid.cpp  test-serialization.cpp  test-sparsevoxelpointcloud.cpp
mola_navstate_fuse/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
mola_navstate_fuse/docs/: module-mola-navstate-fuse.rst
mola_navstate_fuse/include/mola_navstate_fuse/: NavState.h  NavStateFuse.h  NavStateFuseParams.h
mola_navstate_fuse/src/: NavState.cpp  NavStateFuse.cpp  NavStateFuseParams.cpp  register.cpp
mola_navstate_fuse/tests/: CMakeLists.txt  test-navstate-basic.cpp
mola_traj_tools/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
mola_traj_tools/src/: traj_rebase.cpp  traj_tf.cpp  traj_ypr2tum.cpp
mola_viz/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
mola_viz/include/mola_viz/: MolaViz.h
mola_viz/src/: MolaViz.cpp  mola_icon_64x64.h
mola_yaml/: CHANGELOG.rst  CMakeLists.txt  LICENSE  package.xml
mola_yaml/cmake/: FindFilesystem.cmake
mola_yaml/include/mola_yaml/: macro_helpers.h  yaml_helpers.h
mola_yaml/src/: yaml_helpers.cpp
mola_yaml/tests/: CMakeLists.txt  test-yaml-parser.cpp  test2.yaml  test_include1.yaml  test_include2.yaml  test_include3.yaml
mola_yaml/tests/d1/: test3.yaml  test3b.yaml
(+359 files in other folders)
