<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<!-- This is a ROS package file, intended to allow this library to be built
     side-by-side to ROS packages in a catkin/ament environment.
-->
<package format="3">
  <name>mola_bridge_ros2</name>
  <version>1.0.0</version>
  <description>Bidirectional bridge ROS2-MOLA</description>

  <author     email="joseluisblancoc@gmail.com">Jose-Luis Blanco-Claraco</author>
  <maintainer email="joseluisblancoc@gmail.com">Jose-Luis Blanco-Claraco</maintainer>

  <url type="website">https://github.com/MOLAorg/</url>

  <license file="LICENSE">BSD</license>

  <doc_depend>doxygen</doc_depend>

  <!-- COMMON DEPS -->
  <build_depend>ros_environment</build_depend>

  <!-- BUILD TOOLS -->
  <buildtool_depend>cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_gtest</buildtool_depend>
  <buildtool_depend>ament_cmake_gmock</buildtool_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- COMMON DEPS -->
  <depend>mola_common</depend>
  <depend>mola_kernel</depend>

  <depend>mrpt2</depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>

  <depend>ament_lint_common</depend>
  <depend>ament_lint_auto</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <build_depend>ament_cmake_xmllint</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
